src/antlr/parser/Compiler_GrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package antlr/parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Compiler_GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, AND=2, ASSIGN=3, LBRACKET=4, RBRACKET=5, COLON=6, COMMA=7, DIV=8, 
		DOT=9, EXCLMARK=10, GREATER=11, LBRACE=12, LESS=13, MINUS=14, MOD=15, 
		MUL=16, OR=17, PLUS=18, RBRACE=19, SEMICOLON=20, TILDE=21, XOR=22, ANDEQUAL=23, 
		DIVIDEEQUAL=24, EQUAL=25, GREATEREQUAL=26, LESSEQUAL=27, LOGICALOR=28, 
		MINUSEQUAL=29, MODULOEQUAL=30, NOTEQUAL=31, OREQUAL=32, PLUSEQUAL=33, 
		SHIFTLEFTEQUAL=34, SIGNEDSHIFTRIGHTEQUAL=35, TIMESEQUAL=36, UNSIGNEDSHIFTRIGHTEQUAL=37, 
		XOREQUAL=38, BOOLEAN=39, BOOLLITERAL=40, CHAR=41, CLASS=42, ELSE=43, IF=44, 
		INT=45, JNULL=46, NEW=47, PUBLIC=48, PRIVATE=49, PROTECTED=50, RETURN=51, 
		STATIC=52, STRING=53, THIS=54, VOID=55, WHILE=56, CLASSIDENTIFIER=57, 
		IDENTIFIER=58, INTLITERAL=59, CHARLITERAL=60, STRINGLITERAL=61;
	public static final int
		RULE_compilationunit = 0, RULE_classdeclarations = 1, RULE_classdeclaration = 2, 
		RULE_accessmodifier = 3, RULE_classbody = 4, RULE_modifiers = 5, RULE_classbodydeclarations = 6, 
		RULE_classbodydeclaration = 7, RULE_fielddeclaration = 8, RULE_type = 9, 
		RULE_primitivetype = 10, RULE_referencetype = 11, RULE_name = 12, RULE_qualifiedname = 13, 
		RULE_simplename = 14, RULE_variabledeclarators = 15, RULE_variabledeclarator = 16, 
		RULE_variabledeclaratorid = 17, RULE_variableinitializer = 18, RULE_expression = 19, 
		RULE_assignmentexpression = 20, RULE_assignment = 21, RULE_lefthandside = 22, 
		RULE_assignmentoperator = 23, RULE_conditionalorexpression = 24, RULE_conditionalandexpression = 25, 
		RULE_constructordeclaration = 26, RULE_methoddeclaration = 27, RULE_methodheader = 28, 
		RULE_methodbody = 29, RULE_methoddeclarator = 30, RULE_formalparameterlist = 31, 
		RULE_formalparameter = 32, RULE_constructordeclarator = 33, RULE_constructorbody = 34, 
		RULE_argumentlist = 35, RULE_inclusiveorexpression = 36, RULE_exclusiveorexpression = 37, 
		RULE_andexpression = 38, RULE_equalityexpression = 39, RULE_relationalexpression = 40, 
		RULE_relationaloperator = 41, RULE_shiftexpression = 42, RULE_additiveexpression = 43, 
		RULE_multiplicativeexpression = 44, RULE_unaryexpression = 45, RULE_unaryexpressionnotplusminus = 46, 
		RULE_primary = 47, RULE_castexpression = 48, RULE_block = 49, RULE_blockstatements = 50, 
		RULE_localvariabledeclarationstatement = 51, RULE_statement = 52, RULE_statementwithouttrailingsubstatement = 53, 
		RULE_expressionstatement = 54, RULE_statementexpression = 55, RULE_methodinvocation = 56, 
		RULE_classinstancecreationexpression = 57, RULE_classtype = 58, RULE_returnstatement = 59, 
		RULE_literal = 60, RULE_ifthenstatement = 61, RULE_ifthenelsestatement = 62, 
		RULE_whilestatement = 63, RULE_statementnoshortif = 64, RULE_ifthenelsestatementnoshortif = 65, 
		RULE_whilestatementnoshortif = 66;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationunit", "classdeclarations", "classdeclaration", "accessmodifier", 
			"classbody", "modifiers", "classbodydeclarations", "classbodydeclaration", 
			"fielddeclaration", "type", "primitivetype", "referencetype", "name", 
			"qualifiedname", "simplename", "variabledeclarators", "variabledeclarator", 
			"variabledeclaratorid", "variableinitializer", "expression", "assignmentexpression", 
			"assignment", "lefthandside", "assignmentoperator", "conditionalorexpression", 
			"conditionalandexpression", "constructordeclaration", "methoddeclaration", 
			"methodheader", "methodbody", "methoddeclarator", "formalparameterlist", 
			"formalparameter", "constructordeclarator", "constructorbody", "argumentlist", 
			"inclusiveorexpression", "exclusiveorexpression", "andexpression", "equalityexpression", 
			"relationalexpression", "relationaloperator", "shiftexpression", "additiveexpression", 
			"multiplicativeexpression", "unaryexpression", "unaryexpressionnotplusminus", 
			"primary", "castexpression", "block", "blockstatements", "localvariabledeclarationstatement", 
			"statement", "statementwithouttrailingsubstatement", "expressionstatement", 
			"statementexpression", "methodinvocation", "classinstancecreationexpression", 
			"classtype", "returnstatement", "literal", "ifthenstatement", "ifthenelsestatement", 
			"whilestatement", "statementnoshortif", "ifthenelsestatementnoshortif", 
			"whilestatementnoshortif"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'&'", "'='", "'{'", "'}'", "':'", "','", "'/'", "'.'", "'!'", 
			"'>'", "'('", "'<'", "'-'", "'%'", "'*'", "'|'", "'+'", "')'", "';'", 
			"'~'", "'^'", "'&='", "'/='", "'=='", "'>='", "'<='", "'||'", "'-='", 
			"'%='", "'!='", "'|='", "'+='", "'<<='", "'>>='", "'*='", "'>>>='", "'^='", 
			"'boolean'", null, "'char'", "'class'", "'else'", "'if'", "'int'", "'null'", 
			"'new'", "'public'", "'private'", "'protected'", "'return'", "'static'", 
			"'String'", "'this'", "'void'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "AND", "ASSIGN", "LBRACKET", "RBRACKET", "COLON", "COMMA", 
			"DIV", "DOT", "EXCLMARK", "GREATER", "LBRACE", "LESS", "MINUS", "MOD", 
			"MUL", "OR", "PLUS", "RBRACE", "SEMICOLON", "TILDE", "XOR", "ANDEQUAL", 
			"DIVIDEEQUAL", "EQUAL", "GREATEREQUAL", "LESSEQUAL", "LOGICALOR", "MINUSEQUAL", 
			"MODULOEQUAL", "NOTEQUAL", "OREQUAL", "PLUSEQUAL", "SHIFTLEFTEQUAL", 
			"SIGNEDSHIFTRIGHTEQUAL", "TIMESEQUAL", "UNSIGNEDSHIFTRIGHTEQUAL", "XOREQUAL", 
			"BOOLEAN", "BOOLLITERAL", "CHAR", "CLASS", "ELSE", "IF", "INT", "JNULL", 
			"NEW", "PUBLIC", "PRIVATE", "PROTECTED", "RETURN", "STATIC", "STRING", 
			"THIS", "VOID", "WHILE", "CLASSIDENTIFIER", "IDENTIFIER", "INTLITERAL", 
			"CHARLITERAL", "STRINGLITERAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Compiler_GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationunitContext extends ParserRuleContext {
		public ClassdeclarationsContext classdeclarations() {
			return getRuleContext(ClassdeclarationsContext.class,0);
		}
		public CompilationunitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationunit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).enterCompilationunit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).exitCompilationunit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Compiler_GrammarVisitor ) return ((Compiler_GrammarVisitor<? extends T>)visitor).visitCompilationunit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationunitContext compilationunit() throws RecognitionException {
		CompilationunitContext _localctx = new CompilationunitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationunit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			classdeclarations(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassdeclarationsContext extends ParserRuleContext {
		public ClassdeclarationContext classdeclaration() {
			return getRuleContext(ClassdeclarationContext.class,0);
		}
		public ClassdeclarationsContext classdeclarations() {
			return getRuleContext(ClassdeclarationsContext.class,0);
		}
		public ClassdeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).enterClassdeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).exitClassdeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Compiler_GrammarVisitor ) return ((Compiler_GrammarVisitor<? extends T>)visitor).visitClassdeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassdeclarationsContext classdeclarations() throws RecognitionException {
		return classdeclarations(0);
	}

	private ClassdeclarationsContext classdeclarations(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ClassdeclarationsContext _localctx = new ClassdeclarationsContext(_ctx, _parentState);
		ClassdeclarationsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_classdeclarations, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(137);
			classdeclaration();
			}
			_ctx.stop = _input.LT(-1);
			setState(143);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ClassdeclarationsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_classdeclarations);
					setState(139);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(140);
					classdeclaration();
					}
					} 
				}
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassdeclarationContext extends ParserRuleContext {
		public AccessmodifierContext accessmodifier() {
			return getRuleContext(AccessmodifierContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(Compiler_GrammarParser.CLASS, 0); }
		public TerminalNode CLASSIDENTIFIER() { return getToken(Compiler_GrammarParser.CLASSIDENTIFIER, 0); }
		public ClassbodyContext classbody() {
			return getRuleContext(ClassbodyContext.class,0);
		}
		public ClassdeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).enterClassdeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).exitClassdeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Compiler_GrammarVisitor ) return ((Compiler_GrammarVisitor<? extends T>)visitor).visitClassdeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassdeclarationContext classdeclaration() throws RecognitionException {
		ClassdeclarationContext _localctx = new ClassdeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classdeclaration);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PUBLIC:
			case PRIVATE:
			case PROTECTED:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				accessmodifier();
				setState(147);
				match(CLASS);
				setState(148);
				match(CLASSIDENTIFIER);
				setState(149);
				classbody();
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				match(CLASS);
				setState(152);
				match(CLASSIDENTIFIER);
				setState(153);
				classbody();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccessmodifierContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(Compiler_GrammarParser.PUBLIC, 0); }
		public TerminalNode PRIVATE() { return getToken(Compiler_GrammarParser.PRIVATE, 0); }
		public TerminalNode PROTECTED() { return getToken(Compiler_GrammarParser.PROTECTED, 0); }
		public AccessmodifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accessmodifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).enterAccessmodifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).exitAccessmodifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Compiler_GrammarVisitor ) return ((Compiler_GrammarVisitor<? extends T>)visitor).visitAccessmodifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AccessmodifierContext accessmodifier() throws RecognitionException {
		AccessmodifierContext _localctx = new AccessmodifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_accessmodifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 1970324836974592L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassbodyContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(Compiler_GrammarParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(Compiler_GrammarParser.RBRACKET, 0); }
		public ClassbodydeclarationsContext classbodydeclarations() {
			return getRuleContext(ClassbodydeclarationsContext.class,0);
		}
		public ClassbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).enterClassbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).exitClassbody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Compiler_GrammarVisitor ) return ((Compiler_GrammarVisitor<? extends T>)visitor).visitClassbody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassbodyContext classbody() throws RecognitionException {
		ClassbodyContext _localctx = new ClassbodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classbody);
		try {
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				match(LBRACKET);
				setState(159);
				match(RBRACKET);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				match(LBRACKET);
				setState(161);
				classbodydeclarations(0);
				setState(162);
				match(RBRACKET);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModifiersContext extends ParserRuleContext {
		public AccessmodifierContext accessmodifier() {
			return getRuleContext(AccessmodifierContext.class,0);
		}
		public TerminalNode STATIC() { return getToken(Compiler_GrammarParser.STATIC, 0); }
		public ModifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).enterModifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).exitModifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Compiler_GrammarVisitor ) return ((Compiler_GrammarVisitor<? extends T>)visitor).visitModifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModifiersContext modifiers() throws RecognitionException {
		ModifiersContext _localctx = new ModifiersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_modifiers);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				accessmodifier();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				accessmodifier();
				setState(168);
				match(STATIC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassbodydeclarationsContext extends ParserRuleContext {
		public ClassbodydeclarationContext classbodydeclaration() {
			return getRuleContext(ClassbodydeclarationContext.class,0);
		}
		public ClassbodydeclarationsContext classbodydeclarations() {
			return getRuleContext(ClassbodydeclarationsContext.class,0);
		}
		public ClassbodydeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbodydeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).enterClassbodydeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Compiler_GrammarListener ) ((Compiler_GrammarListener)listener).exitClassbodydeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Compiler_GrammarVisitor ) return ((Compiler_GrammarVisitor<? extends T>)visitor).visitClassbodydeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassbodydeclarationsContext classbodydeclarations() throws RecognitionException {
		return classbodydeclarations(0);
	}

	private ClassbodydeclarationsContext classbodydeclarations(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ClassbodydeclarationsContext _localctx = new ClassbodydeclarationsContext(_ctx, _parentState);
		ClassbodydeclarationsContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_classbodydeclarations, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(173);
			classbodydeclaration();
			}
			_ctx.stop = _input.LT(-1);
			setState(179);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ClassbodydeclarationsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_classbodydeclarations);
					setState(175);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(176);
					classbodydeclaration();
					}
					} 
				}
				setState(181);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
